# slalom_explanations

./: README.md  environment.yml  openai.json  pyproject.toml  setup.py
.github/workflows/: python-test.yml
datasets/: sample_00002.txt  sample_00002_bert.txt  slalom_200words.pt  slalom_hat_scores_17.json
experiment_utils/: attribution_methods.py  bow_dataset.py  eval_metrics.py  json_logging.py  metrics.py  reference_models.py  train_models.py  transformer_models.py  utils.py
lxp_models/: distilbert.py  gpt2.py
notebooks/: 0_Quickstart.ipynb  A_MotivationalExperiment.ipynb  B_LearningLinearModels.ipynb  C_Explaining_SLALOM_synth.ipynb  CaseStudy.ipynb  D_ComputeGroundTruthOffline.ipynb  E_RealWorldPlots.ipynb  E_RealWorldPlotsHAT.ipynb  F_Tables.ipynb  G_FidelityMetrics.ipynb  H_SLALOM_OpenAI.ipynb  I_CaseStudy.ipynb  SLALOM_OpenAI.ipynb  Tables.ipynb
scripts/: faithfulness_eval.py  fidelity_config_imdb.json  fidelity_config_imdb_test.json  fidelity_config_yelp.json  fidelity_config_yelp_human.json  fidelity_config_yelp_human_llms.json  runtime_eval_script.py  slalom_openai.py  test_all_models.sh  train_all_models.sh  train_bloom.py  train_mamba.py  train_models_linear.sh  train_models_slalom.sh  yelp_hat_LIME_SHAP.py
slalom_explanations/: __init__.py  attribution_methods.py  bow_dataset.py  json_logging.py  metrics.py  runtime_eval_script.py  slalom_explainer.py  slalom_helpers.py  transformer_models.py  utils.py  visualizations.py
test_code/: test_minimal.py  test_slalom_main.py  test_training.py
test_full/: test_slalom_main.py  test_training.py
test_minimal/: test_minimal.py
tests/: test_slalom_main.py
